--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.20.4",
-		"@twicpics/components": "^0.23.2",
+		"@sveltejs/kit": "^1.27.4",
 		"autoprefixer": "^10.4.16",
 		"postcss": "^8.4.31",
 		"svelte": "^4.0.5",
 		"tailwindcss": "^3.3.3",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"imagekit-javascript": "^2.0.0"
+	}
 }
